--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,18 @@ body {
 
 .header {
 	height: 95vh;
-	background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.808), rgba(40, 180, 133, 0.014)),
-		url(../img/hero.jpg);
+	background-image: linear-gradient(to right bottom, rgba(61, 55, 53, 0.87), rgba(235, 195, 193, 0.048)),
+		url(../images/hero.jpg);
 	background-size: cover;
 	background-position: top;
 	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
+
+.logo-box {
+	position: absolute;
+	top: 40px;
+	left: 40px;
+}
+
+.logo {
 }
