--- a/css/style.css
+++ b/css/style.css
@@ -28,14 +28,32 @@ body {
 		url(../images/hero.jpg);
 	background-size: cover;
 	background-position: top;
+	position: relative;
 	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.text-box {
 	position: absolute;
-	top: 40px;
-	left: 40px;
+	top: 10%;
+	left: 30%;
+	opacity: 70%;
 }
 
-.logo {
+.heading-primary {
+	color: black;
+	text-transform: uppercase;
+}
+
+.heading-primary-main {
+	display: block;
+	font-size: 60px;
+	font-weight: 400;
+	letter-spacing: 35px;
+}
+
+.heading-primary-sub {
+	display: block;
+	font-size: 30px;
+	font-weight: 700px;
+	letter-spacing: 17.4px;
 }
